# SmartHomeValidation

./: .gitmodules  README.md  pyproject.toml  release.py
test/: test_validators.py
validation/: validators.py
validation/config/: README.md  constants.env  env.py
