[tool.poetry]
name = "SmartHomeValidation"
version = "1.0.0"
description = "Validation utilities for smart home device data."
authors = ["Nadav Nevo <nadav.nevo@gmail.com>"]
readme = "README.md"
packages = [{ include = "validation" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"